--- a/src/index.html
+++ b/src/index.html
@@ -7,71 +7,90 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- 
- 
-        <!--Google Font link-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+ <!--Google Font link-->
+ <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
 
-        <link rel="stylesheet" href="assets/css/slick.css"> 
-        <link rel="stylesheet" href="assets/css/slick-theme.css">
-        <link rel="stylesheet" href="assets/css/animate.css">
-        <link rel="stylesheet" href="assets/css/iconfont.css">
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
-        <link rel="stylesheet" href="assets/css/magnific-popup.css">
-        <link rel="stylesheet" href="assets/css/bootsnav.css">
+ <link rel="stylesheet" href="assets/css/slick.css">
+ <link rel="stylesheet" href="assets/css/slick-theme.css">
+ <link rel="stylesheet" href="assets/css/animate.css">
+ <link rel="stylesheet" href="assets/css/fonticons.css">
+ <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+ <link rel="stylesheet" href="assets/css/bootstrap.css">
+ <link rel="stylesheet" href="assets/css/magnific-popup.css">
+ <link rel="stylesheet" href="assets/css/bootsnav.css">
 
 
+ <!--For Plugins external css-->
+ <!--<link rel="stylesheet" href="assets/css/plugins.css" />-->
 
-        <!--For Plugins external css-->
-        <link rel="stylesheet" href="assets/css/plugins.css" />
+ <!--Theme custom css -->
+ <link rel="stylesheet" href="assets/css/style.css">
+ <!--<link rel="stylesheet" href="assets/css/colors/maron.css">-->
 
-        <!--Theme custom css -->
-        <link rel="stylesheet" href="assets/css/style.css">
+ <!--Theme Responsive css-->
+ <link rel="stylesheet" href="assets/css/responsive.css" />
 
-        <!--Theme Responsive css-->
-        <link rel="stylesheet" href="assets/css/responsive.css" />
-
-        <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+ <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
  
 </head>
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="100">
-
-   <!-- Preloader -->
-   <div id="loading">
-      <div id="loading-center">
-          <div id="loading-center-absolute">
-              <div class="object" id="object_one"></div>
-              <div class="object" id="object_two"></div>
-              <div class="object" id="object_three"></div>
-              <div class="object" id="object_four"></div>
-          </div>
-      </div>
-  </div><!--End off Preloader -->
+<body data-spy="scroll" data-target=".navbar-collapse">
+ <!-- Preloader -->
+ <div id="loading">
+		<div id="loading-center">
+			<div id="loading-center-absolute">
+				<div class="object" id="object_one"></div>
+				<div class="object" id="object_two"></div>
+				<div class="object" id="object_three"></div>
+				<div class="object" id="object_four"></div>
+			</div>
+		</div>
+	</div>
+	<!--End off Preloader -->
   <app-root></app-root>
- 
-   <!-- JS includes -->
+  
+  	<!-- JS includes -->
 
-   <script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
-   <script src="assets/js/vendor/bootstrap.min.js"></script>
+	<script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
+	<script src="assets/js/vendor/popper.min.js"></script>
+	<script src="assets/js/vendor/bootstrap.min.js"></script>
 
-   <script src="assets/js/jquery.magnific-popup.js"></script>
-   <!--<script src="assets/js/jquery.easypiechart.min.js"></script>-->
-   <script src="assets/js/jquery.easing.1.3.js"></script>
-   <!--<script src="assets/js/slick.js"></script>-->
-   <script src="assets/js/slick.min.js"></script>
-   <script src="assets/js/js.isotope.js"></script>
-   <script src="assets/js/jquery.collapse.js"></script>
-   <script src="assets/js/bootsnav.js"></script>
+	<script src="assets/js/jquery.magnific-popup.js"></script>
+	<script src="assets/js/jquery.easing.1.3.js"></script>
+	<script src="assets/js/slick.min.js"></script>
+	<script src="assets/js/jquery.collapse.js"></script>
+	<script src="assets/js/bootsnav.js"></script>
 
-   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
-   <script src="assets/js/plugins.js"></script>
-   <script src="assets/js/main.js"></script>
+	<!-- paradise slider js -->
+
+
+	<script src="http://maps.google.com/maps/api/js?key=AIzaSyD_tAQD36pKp9v4at5AnpGbvBUsLCOSJx8"></script>
+	<script src="assets/js/gmaps.min.js"></script>
+
+	<script>
+		function showmap() {
+			var mapOptions = {
+				zoom: 8,
+				scrollwheel: false,
+				center: new google.maps.LatLng(-34.397, 150.644),
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			};
+			var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+			$('.mapheight').css('height', '350');
+			$('.maps_text h3').hide();
+		}
+
+	</script>
+
+
+
+
+
+	<script src="assets/js/plugins.js"></script>
+	<script src="assets/js/main.js"></script>
  
 </body>
 </html>
