--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PFEbeta02</title>
-  <base href="/">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,6 +11,13 @@
  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+ <base href="/">
+<!-- CSS -->
+ <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+ <link rel="stylesheet" href="assets1/bootstrap/css/bootstrap.min.css">
+ <link rel="stylesheet" href="assets1/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets1/css/form-elements.css">
+ <link rel="stylesheet" href="assets1/css/style.css">
 
 
  <link rel="stylesheet" href="assets/css/slick.css">
@@ -21,7 +28,7 @@
  <link rel="stylesheet" href="assets/css/bootstrap.css">
  <link rel="stylesheet" href="assets/css/magnific-popup.css">
  <link rel="stylesheet" href="assets/css/bootsnav.css">
-
+ 
 
  <!--For Plugins external css-->
  <!--<link rel="stylesheet" href="assets/css/plugins.css" />-->
@@ -34,6 +41,17 @@
  <link rel="stylesheet" href="assets/css/responsive.css" />
 
  <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+<!-- Favicon and touch icons -->
+<link rel="shortcut icon" href="assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets1/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets1/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets1/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="assets1/ico/apple-touch-icon-57-precomposed.png">
+
+
+
+
  
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse">
@@ -61,8 +79,16 @@
 	<script src="assets/js/jquery.easing.1.3.js"></script>
 	<script src="assets/js/slick.min.js"></script>
 	<script src="assets/js/jquery.collapse.js"></script>
-	<script src="assets/js/bootsnav.js"></script>
-
+  <script src="assets/js/bootsnav.js"></script>
+  
+  
+        <!-- Javascript -->
+        <script src="assets1/js/jquery-1.11.1.min.js"></script>
+        <script src="assets1/bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets1/js/jquery.backstretch.min.js"></script>
+        <script src="assets1/js/retina-1.1.0.min.js"></script>
+        <script src="assets1/js/scripts.js"></script>
+     
 
 	<!-- paradise slider js -->
 
